--- a/src/main/resources/everload-front/index.html
+++ b/src/main/resources/everload-front/index.html
@@ -4,9 +4,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-<link rel="stylesheet" href="styles.ef46db3751d8e999.css"></head>
+<style>*{margin:0;padding:0;box-sizing:border-box}html,body{height:100%;background-color:#2c2c2c}body{display:flex;flex-direction:column}app-root{flex:1;display:flex;flex-direction:column}</style><link rel="stylesheet" href="styles.22d98800fb0cbd15.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.22d98800fb0cbd15.css"></noscript></head>
 <body>
-  <app-root></app-root>
-<script src="runtime.edf009d25c6c6104.js" type="module"></script><script src="polyfills.9008933875b67f23.js" type="module"></script><script src="main.dde1bb069fa49840.js" type="module"></script>
+    <app-root></app-root>
+   <script src="runtime.edf009d25c6c6104.js" type="module"></script><script src="polyfills.9008933875b67f23.js" type="module"></script><script src="main.dde1bb069fa49840.js" type="module"></script>
 
 </body></html>
